--- a/.github/workflows/IPtest.yml
+++ b/.github/workflows/IPtest.yml
@@ -1,7 +1,8 @@
 name: IPTest
 on:
-  push:
-    branches: [ main ]
+    schedule:
+    - cron: '0 */12 * * *'
+
   workflow_dispatch:
 jobs:
   build:
