--- a/.github/workflows/IPtest.yml
+++ b/.github/workflows/IPtest.yml
@@ -1,7 +1,7 @@
 name: IPTest
 on:
-    schedule:
-    - cron: '0 */12 * * *'
+  push:
+    branches: [ main ]
   workflow_dispatch:
 jobs:
   build:
