--- a/.github/workflows/iptest-cdn.yml
+++ b/.github/workflows/iptest-cdn.yml
@@ -32,7 +32,7 @@ jobs:
           git config --local user.name "GitHub Action"
           git add cdn
           timestamp=$(TZ='Asia/Tehran' date)
-          git commit -m "✅Updated on ${timestamp}"
+          git commit -m "Updated on ${timestamp}"
           git push
 
     - name: Convert output to base64
@@ -51,5 +51,5 @@ jobs:
           git config --local user.name "GitHub Action"
           git add cdn64
           timestamp=$(TZ='Asia/Tehran' date)
-          git commit -m "✅Updated on ${timestamp}"
+          git commit -m "Updated on ${timestamp}"
           git push
