--- a/.github/workflows/IPTest-cdn.yml
+++ b/.github/workflows/IPTest-cdn.yml
@@ -31,11 +31,13 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add cdn
+          timestamp=$(TZ='Asia/Tehran' date)
+          git commit -m "✅ Updated on ${timestamp}"
           git push
 
     - name: Convert output to base64
       run: |
-          content=$(cat cdn | base64 | tr -d '\n')
+          content=$(cat output | base64 | tr -d '\n')
             echo "$content" > cdn64
             
     - name: Check for output Base64 Changes
@@ -48,4 +50,6 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add cdn64
+          timestamp=$(TZ='Asia/Tehran' date)
+          git commit -m "✅ Updated on ${timestamp}"
           git push
