--- a/.github/workflows/IPtest.yml
+++ b/.github/workflows/IPtest.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Run script to create new configs
       run: |
           python iptest.py
+          python iptest-cdn.py
           
     - name: Check for new changes
       id: changes
@@ -31,6 +32,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add output
+          git add cdn
           timestamp=$(TZ='Asia/Tehran' date)
           git commit -m "✅Updated on ${timestamp}"
           git push
@@ -39,6 +41,8 @@ jobs:
       run: |
           content=$(cat output | base64 | tr -d '\n')
             echo "$content" > output64
+          content=$(cat cdn | base64 | tr -d '\n')
+            echo "$content" > cdn64
             
     - name: Check for output Base64 Changes
       id: changesS
@@ -50,6 +54,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add output64
+          git add cdn64
           timestamp=$(TZ='Asia/Tehran' date)
           git commit -m "✅Updated on ${timestamp}"
           git push
