--- a/.github/workflows/IPtest.yml
+++ b/.github/workflows/IPtest.yml
@@ -3,7 +3,8 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
-  
+    schedule:
+    - cron: "0 */2 * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,6 +23,7 @@ jobs:
       run: |
           python iptest.py
           python iptest-cdn.py
+          python dl.py
           
     - name: Check for new changes
       id: changes
